--- a/src/components/layouts/Layout/Layout.scss
+++ b/src/components/layouts/Layout/Layout.scss
@@ -1,6 +1,8 @@
 .layout {
-  width: 100%;
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 40px 24px;
+  &-content {
+    width: 100%;
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 40px 24px;
+  }
 }
