--- a/src/components/organisms/Tabs/Tabs.scss
+++ b/src/components/organisms/Tabs/Tabs.scss
@@ -16,10 +16,66 @@
       margin-right: 2px;
       line-height: 1.2;
       font-weight: 600;
+      min-width: 44px;
+      text-align: center;
+      font-family: 'Montserrat', sans-serif;
 
       &--active {
         background-color: #ADD8E6;
       }
     }
+    &__btn {
+      &-wrapper {
+        position: relative;
+      }
+      &-close {
+        position: absolute;
+        right: -10px;
+        top: -10px;
+        border-radius: 50%;
+        border: 1px #CCCCCC solid;
+        z-index: 2;
+        background-color: #E0FFFF;
+        cursor: pointer;
+        max-width: 20px;
+        max-height: 20px;
+      }
+    }
+  }
+
+  &-header {
+    margin-bottom: 20px;
+    .input {
+      &__label {
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 600;
+        font-size: 24px;
+        margin-bottom: 10px;
+      }
+
+      input {
+        border-radius: 8px;
+        padding: 12.5px 25px;
+        width: 100%;
+        border: 1px solid #DCDCDC;
+        outline: none;
+      }
+    }
+  }
+
+  &-footer {
+    margin-top: 30px;
+    text-align: center;
+  }
+
+  .poll-btn {
+    text-transform: uppercase;
+    font-weight: 600;
+    padding: 12.5px 25px;
+    border-radius: 4px;
+    background-color: #6495ED;
+    border: none;
+    color: #FFFFFF;
+    font-family: 'Montserrat', sans-serif;
   }
 }
